--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -14,8 +14,8 @@
 
 <title>Stochasticity and Uncertainty</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -505,7 +505,7 @@ div.tocify {
 <p>There are two major reasons we can be uncertain. Either we <em>lack sufficient knowledge</em> or the <em>system itself is variable and unpredictable</em>. Let’s explore these two types of uncertainty.</p>
 <ul>
 <li><p><strong>You lack sufficient knowledge</strong>. This is also known variously as <em>sampling uncertainty</em>, parameter uncertainty, structural uncertainty, and more. <em>In practical terms: if you collected more data you could (in principle) make a better model that more closely represents reality.</em></p></li>
-<li><p><strong>The system is inherently variable and unpredictable</strong>. In population ecology and systems modeling, this is also known as <strong>stochasticity</strong>. <em>In practical terms: no matter how much we study and understand a natural system, we will never be able to predict the future with certainty</em>. Ecological systems are inherently variable and unpredictable. We can’t know with certainty whether or not an individual will mate, or die. We can’t really even be certain whether the environmental conditions (e.g., weather) will be favorable or unfavorable for offspring production or mortality!</p></li>
+<li><p><strong>The system is inherently variable and unpredictable</strong>. In population ecology and systems modeling, this is also known as <strong>stochasticity</strong>. <em>In practical terms: no matter how much we study and understand a natural system, we can not predict the future with certainty</em>. Ecological systems are inherently variable and unpredictable. We can’t know with certainty whether or not an individual will mate, or die. We can’t really even be certain whether the environmental conditions (e.g., weather) will be favorable or unfavorable for offspring production or mortality!</p></li>
 </ul>
 </div>
 </div>
@@ -519,7 +519,7 @@ div.tocify {
 <div id="stochastic-models-demographic-and-environmental-stochasticity" class="section level3">
 <h3>Stochastic models (demographic and environmental stochasticity)</h3>
 <ol style="list-style-type: decimal">
-<li><p>Second, we usually can’t predict whether an individual will live or die, breed or not breed, etc. All we can know is the <em>probability</em> of mating, or the <em>probability</em> of dying, or the per-capita <em>rate</em> of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly which individiuals live or die (whether an individual will “get lucky” so to speak!), who gives birth and who doesn’t, and how many females are born, we <em>just can’t know for sure</em>. This is an example of a system being inherently unpredictable. In population ecology, this is called <strong>demographic stochasticity</strong>. In this case, we <strong>randomly vary total births and deaths</strong> (the [Flows] in InsightMaker) to represent the inherent unpredictability of individual fates within a population.</p></li>
+<li><p>Second, we usually can’t predict whether an individual will live or die, breed or not breed, etc. All we can know is the <em>probability</em> of mating, or the <em>probability</em> of dying, or the per-capita <em>rate</em> of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly which individuals live or die (whether an individual will “get lucky” so to speak!), who gives birth and who doesn’t, and how many females are born, we <em>just can’t know for sure</em>. This is an example of a system being inherently unpredictable. In population ecology, this is called <strong>demographic stochasticity</strong>. In this case, we <strong>randomly vary total births and deaths</strong> (the [Flows] in InsightMaker) to represent the inherent unpredictability of individual fates within a population.</p></li>
 <li><p>Third, we usually can’t predict whether next year or the year after will be favorable or unfavorable for population growth- that is, whether the per-capita vital rates (e.g., <span class="math inline">\(b\)</span>, or <span class="math inline">\(d\)</span> or <span class="math inline">\(r\)</span>) will be more or less optimal at a future point in time (whether a <em>population</em> will “get lucky”, so to speak). This is another example of a system being <em>inherently unpredictable</em>. In population ecology this is called <strong>environmental stochasticity</strong>. In this case, we <strong>randomly vary per-capita vital rates</strong> (represented as [Variables] in InsightMaker) to represent the inherent unpredictability of environmental conditions.</p></li>
 </ol>
 <p><img src="dice1.png" /></p>
@@ -548,7 +548,7 @@ barplot(table(box)/sum(table(box)),ylab=&quot;probability&quot;,xlab=&quot;possi
 </div>
 <div id="discrete-vs.-continuous" class="section level3">
 <h3>Discrete vs. continuous</h3>
-<p>In <em>discrete distributions</em>, each unique outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For example, let’s consider a <em>binomial distribution</em></p>
+<p>In <em>discrete distributions</em>, each unique outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For practical purposes in this class, discrete distributions produce integers and are used to represent demographic stochasticity (variation in the total number of births and deaths even if per-capita vital rates don’t change). For example, let’s consider a <em>binomial distribution</em></p>
 <pre class="r"><code>################
 # Discrete distributions
 ################
@@ -565,6 +565,7 @@ names(probs) &lt;- xvals
 barplot(probs,ylab=&quot;Probability&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Binomial distribution (discrete)&quot;)</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
 <p><strong>Q</strong> What population parameter might the binomial distribution be useful for modeling?</p>
+<p><strong>tophat</strong> In R, generate one random number from a Binomial distribution with 10 trials and probability of success equal to 0.3</p>
 <p>Another discrete distribution we will use in this class is the <em>Poisson distribution</em>:</p>
 <pre class="r"><code>#########
 # Poisson distribution
@@ -576,7 +577,7 @@ names(probs) &lt;- xvals
 barplot(probs,ylab=&quot;Probability&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Poisson distribution (discrete)&quot;)</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-4-1.png" width="672" /></p>
 <p><strong>Q</strong> What population parameter might the Poisson distribution be useful for modeling?</p>
-<p>In <em>continuous distributions</em>, there are an infinite number of possibilities between any two unique possibilities.</p>
+<p>In <em>continuous distributions</em>, there are an infinite number of possibilities between any two unique possibilities. For practical purposes in this class, continuous distributions produce numbers with decimal components and are used to represent environmental stochasticity (variability in per-capita vital rates).</p>
 <p>Let’s consider the <em>uniform distribution</em>:</p>
 <pre class="r"><code>################
 # CONTINUOUS DISTRIBUTIONS
@@ -592,7 +593,6 @@ curve(dunif(x,lower,upper),0,10,ylab=&quot;Probability (density)&quot;,xlab=&quo
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-5-1.png" width="672" /></p>
 <p>This isn’t a very intersting looking distribution. All possible numbers from 0 to 10 are equally probable.</p>
 <p>Another continuous distribution you should know is called the <em>Normal distribution</em>. This distribution (the classic bell-shaped distribution) has a lower bound of <span class="math inline">\(-\infty\)</span> and an upper bound of <span class="math inline">\(\infty\)</span>.</p>
-<p><strong>Q</strong> What population parameter might this distribution be useful for modeling?</p>
 <pre class="r"><code>#########
 # Normal distribution
 
@@ -601,6 +601,8 @@ stdev = 1.9
 
 curve(dnorm(x,mean,stdev),0,15,ylab=&quot;Probability (density)&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Normal distribution (continuous)&quot;)   # probability density</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+<p><strong>Q</strong> What population parameter might this distribution be useful for modeling?</p>
+<p><strong>tophat</strong> In R, generate one random number from a Normal distribution with mean of 1.75 and standard deviation of 0.9</p>
 <p>Another continuous distribution you should know is called the <em>Log-normal distribution</em>. This distribution has a lower bound of zero and an upper bound of <span class="math inline">\(\infty\)</span>.</p>
 <p><strong>Q</strong> What population parameter might the log-normal distribution be useful for modeling?</p>
 <pre class="r"><code>############
@@ -668,7 +670,7 @@ distribution &lt;- c(5,3,5,4,3,6,4,5,5,1,6,5,4,3,6,6,4,2,8,4,4,5,2)     # make u
 hist(distribution,freq = F, ylab=&quot;Probability&quot;,xlab=&quot;Possibilities&quot;)  # visualize distribution</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
 <pre class="r"><code>sample(distribution,1)  # take one random sample from this distribution!</code></pre>
-<pre><code>## [1] 4</code></pre>
+<pre><code>## [1] 3</code></pre>
 </div>
 <div id="in-class-exercise-fit-a-distribution" class="section level3">
 <h3>In-Class Exercise: Fit a distribution!</h3>
@@ -709,7 +711,7 @@ curve(dlnorm(x,meanlog=1.8,sdlog=0.39),col=&quot;green&quot;,lty=2,lwd=2,add=T) 
 #### Once you find the best-fit parameters, generate 5 random numbers from this distribution using the &quot;rlnorm()&quot; function in R
 
 rlnorm(5,meanlog=1.5,sdlog=0.39)    # for example! (remember to change the &quot;meanlog&quot; parameter to the value you identified above!)</code></pre>
-<pre><code>## [1] 7.589431 5.213440 3.247581 5.628209 3.744931</code></pre>
+<pre><code>## [1] 7.692559 2.315045 4.992253 5.103773 3.564848</code></pre>
 <ol style="list-style-type: decimal">
 <li><p>Use trial-and-error to find appropriate “meanlog” parameter for the lognormal distribution.</p></li>
 <li><p>Use your fitted distribution to predict the average number of hatchlings per female for the next 5 years. To do this, use the “rlnorm()” function in R.</p></li>
