--- a/LAB4.html
+++ b/LAB4.html
@@ -708,34 +708,25 @@ stmat</code></pre>
 <li><p>As always, URLs for your InsightMaker models should be pasted in your lab submission (in Top Hat). See details below…</p></li>
 </ul>
 <p><strong><em>Due Fri Mar. 4 at 11:59pm</em></strong></p>
-<ul>
-<li>Word document with short answers
-<ul>
-<li><strong>Exercise 1</strong>
-<ul>
-<li><em>Short answer (1a.)</em><br />
-</li>
-<li><em>Short answer (1b.)</em><br />
-</li>
-<li><em>Short answer (1c.)</em></li>
-<li><em>Short answer (1d.)</em></li>
-<li><em>Short answer (1e.)</em></li>
-</ul></li>
-<li><strong>Exercise 2</strong>
-<ul>
-<li><em>Short answer (2a.)</em></li>
-<li><em>IM and R plots (2b.)</em></li>
-<li><em>InsightMaker url (2c.)</em></li>
-<li><em>IM and R plots (2d.)</em></li>
-</ul></li>
-<li><strong>Exercise 3</strong>
-<ul>
-<li><em>Short answer (3a.)</em></li>
-<li><em>Short answer (3b.)</em></li>
-<li><em>Short answer (3c.)</em></li>
-</ul></li>
-</ul></li>
-</ul>
+<pre><code>+  **Exercise 1**
+    -  *Short answer (1a.)*    
+    -  *Short answer (1b.)*  
+    -  *Short answer (1c.)* 
+    -  *Short answer (1d.)* 
+    -  *Short answer (1e.)* 
+
++  **Exercise 2**
+    -  *Short answer (2a.)* 
+    -  *IM and R plots (2b.)* 
+    -  *InsightMaker url (2c.)* 
+    -  *IM and R plots (2d.)*  
+
++  **Exercise 3**
+    -  *Short answer (3a.)* 
+    -  *Short answer (3b.)* 
+    -  *Short answer (3c.)* 
+    
+    </code></pre>
 </div>
 
 
