--- a/LAB3.html
+++ b/LAB3.html
@@ -603,37 +603,26 @@ div.tocify {
 <li>Please type your responses into one Word document and submit <em>using Top Hat</em>!</li>
 </ul>
 <p><strong><em>Due Feb 18 at 11:59pm.</em></strong></p>
-<ul>
-<li>Word document with short answers
-<ul>
-<li><strong>Exercise 1</strong>
-<ul>
-<li><em>Short answer (1a.)</em><br />
-</li>
-<li><em>Short answer (1b.)</em></li>
-<li><em>Short answer (1c.)</em></li>
-<li><em>Short answer (1d.)</em></li>
-<li><em>Short answer (1e.)</em></li>
-</ul></li>
-<li><strong>Exercise 2</strong>
-<ul>
-<li><em>Short answer (2a.)</em></li>
-<li><em>Short answer (2b.)</em></li>
-</ul></li>
-<li><strong>Exercise 3</strong>
-<ul>
-<li><em>Short answer (3a.)</em></li>
-<li><em>Short answer (3b.)</em></li>
-<li><em>Short answer (3c.)</em></li>
-<li><em>InsightMaker model (3d.)</em></li>
-</ul></li>
-<li><strong>Exercise 4 (optional)</strong>
-<ul>
-<li><em>Short answer (4a.)</em></li>
-<li><em>InsightMaker model (4b.)</em></li>
-</ul></li>
-</ul></li>
-</ul>
+<pre><code>+  **Exercise 1**
+    -  *Short answer (1a.)*   
+    -  *Short answer (1b.)* 
+    -  *Short answer (1c.)*
+    -  *Short answer (1d.)*
+    -  *Short answer (1e.)*
+
++  **Exercise 2**
+    -  *Short answer (2a.)*
+    -  *Short answer (2b.)*
+
++  **Exercise 3**
+    -  *Short answer (3a.)*
+    -  *Short answer (3b.)*
+    -  *Short answer (3c.)*
+    -  *InsightMaker model (3d.)*
+    
++  **Exercise 4 (optional)**
+    -  *Short answer (4a.)*
+    -  *InsightMaker model (4b.)*</code></pre>
 </div>
 
 
