--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -14,8 +14,8 @@
 
 <title>Stochasticity and Uncertainty</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
-<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -631,13 +631,7 @@ rpois(1,lambda=4.1)     # note: &quot;lambda&quot; represents the mean (and vari
 runif(1,min=1,max=3.5)   # &quot;min&quot; and &quot;max&quot; are pretty obvious!
 
 ### Normal random number generator
-rnorm(1,mean=3,sd=4.1)   # normal distribution is defined by &quot;mean&quot; and &quot;sd&quot; (standard deviation).
-
-### lognormal random number generator (like normal distribution, but can not go below zero)
-rlnorm(1,meanlog=0.5,sdlog=0.2)    # lognormal distribution is defined by &quot;meanlog&quot;, the mean on the log scale and &quot;sdlog&quot; (standard deviation on the log scale).
-
-### beta random number generator (bounded between 0 and 1- just like survival rate!)
-rbeta(1,shape1=10,shape2=3)  # beta distribution is defined by &quot;shape1&quot; and &quot;shape2&quot;, which together define the mean and spread within the range from 0 to 1.</code></pre>
+rnorm(1,mean=3,sd=4.1)   # normal distribution is defined by &quot;mean&quot; and &quot;sd&quot; (standard deviation).</code></pre>
 <p><strong>tophat</strong> In R, generate one random number from a Binomial distribution with 10 trials and probability of success equal to 0.3</p>
 <p><strong>tophat</strong> In R, generate one random number from a Normal distribution with mean of 1.75 and standard deviation of 0.9</p>
 <p>Can you modify one of the above functions to produce more than 1 random number?</p>
@@ -663,7 +657,7 @@ hist(hatch_perfem)</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
 <p><strong>Q</strong>: What type of uncertainty does this set of values most likely represent? What random number generator might you use to represent this uncertainty? [tophat]</p>
 <p>Now let’s try to fit a distribution to these data! Let’s use a normal distribution. (NOTE: technically speaking we might want to use a distribution that can’t produce negative numbers- like the log-normal distribution, but we will usually use the normal distribution in this class for simplicity)</p>
-<p>We could use statistics to fit the distribution, but we are just going to use trial and error for now! Here is some code to help you get started.</p>
+<p>We could use statistics to fit the distribution, but for now we are just going to use trial and error! Here is some code to help you get started.</p>
 <p>Note that the normal distribution has two parameters: the first (‘mean’) helps to define the mean (obviously!) and the other (‘sd’) determines the variability of the distribution.</p>
 <pre class="r"><code>############
 # Try to identify a normal distribution to represent the canvasback data
@@ -682,12 +676,14 @@ curve(dnorm(x,mean=1.8,sd=0.39),col=&quot;green&quot;,lty=2,lwd=2,add=T)    # tr
 #### Once you find the best-fit parameters, generate 5 random numbers from this distribution using the &quot;rnorm()&quot; function in R
 
 rnorm(5,mean=4,sd=1)    # for example! (remember to change the &quot;mean&quot; and &quot;sd&quot; parameters to the values you identified above!)</code></pre>
-<pre><code>## [1] 3.113705 2.953660 4.181119 4.316831 3.027695</code></pre>
+<pre><code>## [1] 4.346721 4.271566 5.856070 3.359215 3.634686</code></pre>
 <ol style="list-style-type: decimal">
-<li><p>Use trial-and-error to find appropriate “mean” and “sd” parameters for the normal distribution.</p></li>
-<li><p>Use your fitted distribution to predict the per-capita production of hatchlings for the next 5 years. To do this, use the “rnorm()” function in R.</p></li>
+<li>Use trial-and-error to find appropriate “mean” and “sd” parameters for the normal distribution.</li>
 </ol>
 <p><strong>Q</strong>: what is the best-fit value for “mean”? [tophat] <strong>Q</strong>: what is the best-fit value for “sd”? [tophat]</p>
+<ol start="2" style="list-style-type: decimal">
+<li>Use your fitted distribution to predict the per-capita production of hatchlings for the next 5 years. To do this, use the “rnorm()” function in R.</li>
+</ol>
 </div>
 <div id="in-class-exercise-2-stochasticity-and-uncertainty-in-insightmaker" class="section level3">
 <h3>In-Class Exercise 2: Stochasticity and Uncertainty in InsightMaker</h3>
